# homebrew

./: Cargo.toml  README.md  REUSE.toml  copr-script.sh  homebrew-install.patch  homebrew-template.spec
.github/workflows/: lint.yml
brew-sandbox/: Cargo.toml
etc/homebrew/: brew-sandbox.env  brew.env
etc/profile.d/: brew.sh
systemd/: brew-setup.service
usr/lib/systemd/system/: brew-sandbox-setup.service  brew-update.service  brew-update.timer  brew-upgrade.service  brew-upgrade.timer
usr/lib/systemd/user/: brew-update.service  brew-update.timer  brew-upgrade.service  brew-upgrade.timer
usr/lib/sysusers.d/: homebrew.conf
usr/lib/tmpfiles.d/: homebrew.conf
usr/share/fish/vendor_conf.d/: brew-fish-completions.fish
